# POO-en-C

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  Formas  Makefile  README.md  cmake_install.cmake  main.c
.cmake/api/v1/reply/: cache-v2-6718337eb23e32ebeae6.json  cmakeFiles-v1-c03077681a0c521a8950.json  codemodel-v2-b9f5fe24154075059437.json  codemodel-v2-e3406cc700216390da13.json  index-2025-06-24T09-37-50-0885.json  index-2025-06-24T11-46-25-0275.json  target-Formas-Debug-9a32f1219866d21a19e9.json  target-Formas-Debug-f64c58e4d265b4b21f28.json
formas/: circunferencia.c  circunferencia.h  cuadrado.c  cuadrado.h  forma.c  forma.h  pentagono.c  pentagono.h  triangulo_equi.c  triangulo_equi.h
opciones_menu/: opciones_menu_principal.c  opciones_menu_principal.h
